--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: Anonymous Q&A
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -35,6 +35,7 @@ dependencies:
   flutter_svg: 0.17.3+1
   cupertino_icons: ^0.1.3
   functional_widget_annotation: ^0.5.0
+  flushbar: ^1.10.0
 
 
 dev_dependencies:
