Added image uploading in signup screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: Anonymous Q&A
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,7 +26,9 @@ dependencies:
   cloud_firestore: ^0.13.4+2
 
   firebase_auth: ^0.15.5+3
+  firebase_storage: ^3.0.3
   google_sign_in: ^4.3.0
+  image_picker: ^0.6.0+17
 
   provider: ^4.0.4
   font_awesome_flutter: ^8.8.0
