--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: ^0.4.4+3
-  firebase_analytics: ^5.0.11
+  firebase_core: ^0.4.0+9
+  # Add the dependency for the FlutterFire plugin for Google Analytics
+  firebase_analytics: ^5.0.2
 
-  cloud_firestore: ^0.13.4+2
-
-  firebase_auth: ^0.15.5+3
+  # Add the dependencies for any other Firebase products you want to use in your app
+  # For example, to use Firebase Authentication and Cloud Firestore
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.13.5
   firebase_storage: ^3.0.3
   google_sign_in: ^4.3.0
   image_picker: ^0.6.0+17
@@ -37,7 +39,7 @@ dependencies:
   flutter_svg: 0.17.3+1
   cupertino_icons: ^0.1.3
   functional_widget_annotation: ^0.5.0
-  flushbar: ^1.10.0
+  flushbar: 1.9.1
 
 
 dev_dependencies:
